<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="match_parent"
tools:context=".fragments.FirstFragment"
android:padding="50dp"
android:gravity="center"
android:orientation="vertical"
android:weightSum="1"
android:focusable="true"
android:focusableInTouchMode="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centered"
        android:textColor="@color/defaultTextColor"
        android:textSize="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/defaultTextColor"
        android:textSize="12dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/textUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/user_hint"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        style="@style/ButtonStyle"
        android:layout_marginTop="15dp"/>

</LinearLayout>

